nav spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,13 @@
 	font-size: 1.25em;
 	border-color: white;
 	font-family: "Courier New";
-	height:30%;
-	top: -6vh;
+	height:31%;
+	top: -8vh;
 }
 
 .navtop{
 	position: relative;
-	top: -12vh;
+	top: -5em;
 }
 
 .navbar-header{
@@ -23,6 +23,7 @@
 	width: 15%;
 	position: relative;
 	margin-left: 2vh;
+	margin-top: -1.3%;
 }
 
 .bike{
